--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1807,7 +1807,7 @@
 		}
 
 	body, input, select, textarea {
-		color: #666;
+		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -1830,7 +1830,7 @@
 		}
 
 	strong, b {
-		color: #555;
+		color: #96DBF7;
 		font-weight: 400;
 	}
 
@@ -1843,7 +1843,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #555;
+		color: #ffffff;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 	}
@@ -2703,7 +2703,7 @@
 	}
 
 		.main.style1 {
-			background: #fff;
+			background: #1B67A5;
 		}
 
 		.main.style2 {
